[package]
name = "thread_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"

[[bin]]
name = "channel"
path = "src/channel/mod.rs"

[[bin]]
name = "task"
path = "src/tasks/mod.rs"