[package]
name = "thread_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
parking_lot = "0.12.3"
tokio = "1.44.1"

[[bin]]
name = "channel"
path = "src/channel/mod.rs"

[[bin]]
name = "task"
path = "src/tasks/mod.rs"

[[bin]]
name = "new_mpsc_know"
path = "src/mpsc/mod.rs"

[[bin]]
name = "speaker"
path = "src/speaker/mod.rs"

[[bin]]
name = "lower_level"
path = "src/lower_level/mod.rs"
